--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-datepicker": "^4.8.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.5",
+    "reactstrap": "^9.1.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "thunk": "^0.0.1"
   },
   "devDependencies": {
     "eslint": "8.18.0",
